--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,10 +3,12 @@
       data-th-fragment="layout(content, title,css)"
       xmlns:th="http://www.thymeleaf.org">
 <!-- Font Awesome -->
+
 <script src="https://kit.fontawesome.com/0dfb43c94e.js" crossorigin="anonymous"></script>
 <head>
     <meta charset="UTF-8">
     <title data-th-replace="${title}"></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" data-th-href="@{/css/modal.css}">
     <link rel="stylesheet" data-th-href="@{/css/index.css}">
     <link rel="stylesheet" data-th-href="@{/css/header.css}">
