--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -4,10 +4,8 @@ footer {
     text-align: center;
     padding: 1rem;
     width: 100%;
-    position: absolute;
     bottom: 0;
-    left: 0;
-    margin: 0 auto;
+    margin: 15px 0 0 0 ;
     padding-bottom: 0;
 
 
