--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,7 +4,7 @@ header {
     padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 0 0 15px 0;
     width: 99%;
 
 }
