ajustement css article

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -2,7 +2,7 @@
 <title>Vendre un nouvel article</title>
 
 <body>
-<main class="container">
+<main class="container-form-article">
     <div class="card main-card">
         <h2 class="floating-title-article">Vendre un nouvel article</h2>
         <form th:action="@{/articles/creer}" th:object="${article}" method="post" enctype="multipart/form-data">
