--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" data-th-href="@{/css/modal.css}">
     <link rel="stylesheet" data-th-href="@{/css/index.css}">
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres.css}">
+    <link rel="stylesheet" data-th-href="@{/css/mesEncheres_mobile.css}">
+    <link rel="stylesheet" data-th-href="@{/css/article_mobile.css}">
     <link rel="stylesheet" data-th-href="@{/css/article.css}">
     <link rel="stylesheet" data-th-href="@{/css/header.css}">
     <link rel="stylesheet" data-th-href="@{/css/footer.css}">
