--- a/src/main/resources/templates/mesEncheres.html
+++ b/src/main/resources/templates/mesEncheres.html
@@ -9,7 +9,7 @@
 </head>
 <main>
 
-    <h2>Mes objets mis en enchère terminés</h2>
+    <h2 class="titre_mobile_encheres">Mes objets mis en enchère terminés</h2>
     <section class="encheres">
         <div class="carousel">
             <button class="carousel-btn prev">&#10094;</button>
