--- a/src/main/resources/static/css/mesEncheres_mobile.css
+++ b/src/main/resources/static/css/mesEncheres_mobile.css
@@ -1,19 +1,18 @@
 /*sur les ecrans quand la largeur de la fenêtre fait au max 767 px*/
 
 @media screen and (min-width:300px) and ( max-width:767px) {
-   *{
+    body {
         width: 100%;
         margin: 0 auto;
+    }
+
+    .encheres {
         display: flex;
-        flex-direction:  column;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
     }
 
-    .titre_mobile_encheres h2{
-        text-align: center;
-        margin: 0 auto;
-        padding-left: 20px;
+    .titre_mobile_encheres {
         color: red;
     }
 }
