--- a/src/main/resources/static/css/mesEncheres.css
+++ b/src/main/resources/static/css/mesEncheres.css
@@ -50,6 +50,9 @@
 .carousel-btn:hover {
     opacity: 1;
 }
+.h2{
+    color: red;
+}
 
 /* Positionnement des flèches */
 .carousel-btn.prev {
@@ -63,11 +66,4 @@
 /* Affichage des flèches au survol du carousel */
 .carousel:hover .carousel-btn {
     opacity: 1;
-}
-
-/* Pour les petites tailles d'écran (optionnel) */
-@media (max-width: 768px) {
-    .card {
-        flex: 0 0 50%; /* Affiche 2 cartes par ligne sur les petits écrans */
-    }
 }
