--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,12 +1,19 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 footer {
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem 0;
     width: 100%;
-    bottom: 0;
-    margin: 15px 0 0 0 ;
-    padding-bottom: 0;
-
-
+    max-width: 100vw;
+    box-sizing: border-box;
+    overflow: hidden;
+    font-size: 0.9rem;
 }
