--- a/src/main/resources/templates/fragments/detailVente.html
+++ b/src/main/resources/templates/fragments/detailVente.html
@@ -1,12 +1,13 @@
 <div th:fragment="detailVente(mode)" class="display-enchere">
 <!--  ajout de l'image-->
+  <img data-th-src="@{${article.urlImage}}" alt="Image de l'article">
   <ul>
     <li data-th-text="${article.nomArticle}"></li>
     <li data-th-text="'Description : '+${article.description}"></li>
     <li data-th-text="'Catégorie : '+${article.categorie.libelle}"></li>
-    <li data-th-if="${enchere.montantEnchere > 0}" data-th-text="'Meilleur offre : '+${enchere.montantEnchere}"></li>
+    <li data-th-if="${enchere.montantEnchere > 0}" data-th-text="'Meilleur offre : '+${enchere.montantEnchere}+' Crédit(s) par '+${enchere.utilisateur.pseudo}"></li>
     <li data-th-if="${enchere.montantEnchere == 0}" data-th-text="'Meilleur offre : Aucune offre actuellement'"></li>
-    <li data-th-text="'Mise à prix : '+ ${article.miseAPrix}"></li>
+    <li data-th-text="'Mise à prix : '+ ${article.miseAPrix}+' Crédit(s)'"></li>
     <li data-th-text="'Fin de l\'enchère : ' + ${#dates.format(article.dateFinEncheres, 'dd/MM/yyyy')}"></li>
     <li>  Retrait :
       <ul>
